# FileBrowser

./: CMakeLists.txt  Cpp11_AutoDecltype.cpp  README.adoc  SystemInfo.cpp  TestCls.cpp  TestCls.hpp  program.cpp  qtprogram.cpp
images/: WiFrontend.html
inc/: Cpp11_AutoDecltype.hpp  FileSystem.hpp  SystemInfo.hpp
qml/: FileModel.qml  main.qml  model.qml
qml/components/: FormField.qml
qml/models/: Background.qml  DynamicView.qml  InfoList.qml  InfoListDelegate.qml  ListDelegate.qml  ListHighlight.qml  TextEntry.qml
src/: FileSystem.cpp  SystemInfo.cpp  program.cpp  qt_program.cpp
src/models/: DataEntryModel.cpp  DataEntryModel.hpp  DynamicEntryModel.cpp  DynamicEntryModel.hpp  RoleEntryModel.cpp  RoleEntryModel.hpp
